--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,12 +1,16 @@
 .Navv{
-background-color: #8b9395;
-display: flex;
-justify-content: space-around;
-align-items: center;
- width: 100%;
- height: 100px;
+    background-color: #8b9395;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    position: fixed;
+    top:0;
+    box-shadow:  0 0 15px 0px rgb(39, 39, 39);
 }
-.Nav{
+.Nav {
     padding: 0px;
 }
 img{
