some useState done

--- a/src/css/White_paper.css
+++ b/src/css/White_paper.css
@@ -9,4 +9,8 @@
     margin-bottom: 150px;
     margin-left: 50px;
     margin-right: 50px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
 }
