--- a/src/css/Logo_cafe.css
+++ b/src/css/Logo_cafe.css
@@ -1,12 +1,13 @@
 .logo{
-    height: 80px;
-    width: 80px;
-    background-color: azure;
+    height: 85px;
+    width: 85px;
+    background-color: rgb(131, 87, 20);
     border-radius: 50%;
     position: absolute;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 12px;
 }
 img{
     height: 50px;
