--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,7 +1,7 @@
 .Navv{
-    background-color: #8b9395;
+    background-color: #ffffff;
     display: flex;
-    justify-content: space-around;
+   justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 100px;
@@ -15,5 +15,8 @@
 }
 img{
     width: 80px;
-    
+}
+.Round{
+    align-items: center;
+    justify-content: space-around;
 }
