--- a/src/css/Text.css
+++ b/src/css/Text.css
@@ -8,7 +8,7 @@
     text-align: left;
     margin-top: 5rem;
    text-decoration: underline;
-   margin-bottom: 10%;
+    margin-bottom: 15px;
 }
 .textB{
     text-align: left;
