--- a/src/css/Logo_cafe.css
+++ b/src/css/Logo_cafe.css
@@ -1,17 +1,15 @@
-.logo{
-    height: 85px;
-    width: 85px;
-    background-color: rgb(131, 87, 20);
-    border-radius: 50%;
+.logo {
+    height: 50px;
     position: absolute;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 12px;
-}
-img{
-    height: 50px;
-    width: 50px;
-    margin-left: 5px;
+    margin-top: 30px;
+
 }
 
+img {
+    height: 250px;
+    margin-right: 15%;
+    margin-bottom: 55%;
+}
