--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,33 +1,19 @@
-.Navv{
+.Navv {
     background-color: #ffffff;
     display: flex;
-   justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100px;
     overflow: hidden;
     position: fixed;
-    top:0;
-    box-shadow:  0 0 15px 0px rgb(39, 39, 39);
+    top: 0;
 }
-.Nav {
-    padding: 0px;
-}
-img{
-    width: 80px;
-}
-.NavL{
-    margin-bottom: 104px;
-    margin-right: 65px;
-  
-}
-.Round{
-    align-items: center;
-    justify-content: space-around;
-}
-a{
-    text-decoration:none;
-    color:black;
-    margin-left: 5%;
-    margin-left: 5%;
+
+
+a {
+    text-decoration: none;
+    color: black;
+    margin-left: 2%;
+    margin-right: 15%;
 }
