peleando con las columnas

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -9,3 +9,8 @@ button {
     margin-right: 15px;
     margin-bottom: 30%;
 }
+.home1{
+width: 100%;
+justify-content: space-around;
+background-color: brown;
+}
