--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,7 +1,6 @@
 button {
     height: 95px;
     width: 115px;
-    border-radius: 30%;
     justify-content: space-around;
     align-items: center;
     margin-top: 5px;
@@ -9,12 +8,42 @@ button {
     margin-right: 15px;
     margin-bottom: 30%;
 }
+
 .home1 {
     width: 100%;
     display: flex;
     background-color: brown;
     height: fit-content;
-    justify-content: right;
-    margin-right: 5%;
+    justify-content: center;
     margin-top: 5%;
+}
+
+.new1 {
+    margin-top: 10%;
+    margin-left: 6%;
+    text-align: right;
+    margin-right: 20%;
+}
+
+.new1 button {
+    width: 150px;
+    height: 100px;
+    background-color: transparent;
+    color: white;
+    font-size: 21px;
+    border-radius: 5%;
+    border-color: rgb(245, 245, 245);
+
+    border-width: 15px;
+}
+
+.new1 img {
+    margin-bottom: 2px;
+    margin-right: 2px;
+    width: 550px;
+    height: 400px;
+}
+
+.new1 p {
+    margin-left: 400px;
 }
